Bug 1722787 [wpt PR 29821] - Rename Canvas2D.textWordSpacing to Canvas2D.wordSpacing, a=testonly
Automatic update from web-platform-tests
Rename Canvas2D.textWordSpacing to Canvas2D.wordSpacing

Per discussion in https://github.com/w3ctag/design-reviews/issues/627,
we have agreed to remove text prefix for attribute textWordSpacing. So
that thee attribute name wordSpacing follows the same naming conversion
of other text attributes.

Bug: 1233706

Change-Id: Ic735c7c4617572511fd37fe0928f8919e7fd3f69
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3056391
Reviewed-by: Bo <boliuchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Yi Xu <yiyixchromium.org>
Cr-Commit-Position: refs/heads/master{#906470}

--

wpt-commits: 7666067297aef38ba695aac42f703e627d9c6dd9
wpt-pr: 29821

UltraBlame original commit: 2e9f637268123d1f53bd3c954e2422917d340019

--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/drawing-text-to-the-canvas.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/drawing-text-to-the-canvas.yaml
@@ -6192,7 +6192,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6216,7 +6216,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6224,7 +6224,7 @@ textWordSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -6240,7 +6240,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6255,7 +6255,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -6273,7 +6273,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6332,7 +6332,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6346,7 +6346,7 @@ value
 {
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 value
 ;
@@ -6359,7 +6359,7 @@ value
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6436,7 +6436,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6475,7 +6475,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6523,7 +6523,7 @@ width_normal
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -6545,7 +6545,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -6603,7 +6603,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -6621,7 +6621,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
