--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
@@ -10824,7 +10824,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -10848,7 +10848,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -10856,7 +10856,7 @@ textWordSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -10872,7 +10872,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -10887,7 +10887,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -10905,7 +10905,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -10970,7 +10970,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -10984,7 +10984,7 @@ value
 {
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 value
 ;
@@ -10997,7 +10997,7 @@ value
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -11080,7 +11080,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -11119,7 +11119,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -11167,7 +11167,7 @@ width_normal
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -11189,7 +11189,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
@@ -11247,7 +11247,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -11265,7 +11265,7 @@ textLetterSpacing
 assert
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 =
 =
