Bug 1722788 [wpt PR 29822] - Rename Canvas2D.textLetterSpacing to Canvas2D.letterSpacing, a=testonly
Automatic update from web-platform-tests
Rename Canvas2D.textLetterSpacing to Canvas2D.letterSpacing

Per discussion in https://github.com/w3ctag/design-reviews/issues/627,
we have agreed to remove text prefix for attribute textLetterSpacing. So
that thee attribute name letterSpacing follows the same naming
conversion of other text attributes.

Bug: 1233706

Change-Id: I8b37f046f5cdbfb28848ba3930e047203b061982
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3056509
Commit-Queue: Yi Xu <yiyixchromium.org>
Reviewed-by: Bo <boliuchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#906594}

--

wpt-commits: 34cb7e900e12fb6b9dc71b6c78d0aa9915dd18d4
wpt-pr: 29822

UltraBlame original commit: 360dd21dbf7066d32b70028cb281b01960620a4a

--- a/testing/web-platform/tests/html/canvas/tools/yaml/element/drawing-text-to-the-canvas.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/element/drawing-text-to-the-canvas.yaml
@@ -6183,7 +6183,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6200,14 +6200,14 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6231,7 +6231,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6248,7 +6248,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 1
@@ -6263,7 +6263,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6323,7 +6323,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6352,7 +6352,7 @@ value
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 value
 ;
@@ -6368,7 +6368,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6427,7 +6427,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6459,14 +6459,14 @@ width
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6529,14 +6529,14 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 0
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -6596,7 +6596,7 @@ width_normal
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 2
@@ -6611,7 +6611,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
