--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
@@ -10815,7 +10815,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -10832,14 +10832,14 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -10863,7 +10863,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -10880,7 +10880,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 1
@@ -10895,7 +10895,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -10961,7 +10961,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -10990,7 +10990,7 @@ value
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 value
 ;
@@ -11006,7 +11006,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -11071,7 +11071,7 @@ code
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -11103,14 +11103,14 @@ width
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -11173,14 +11173,14 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 0
 ;
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
@@ -11240,7 +11240,7 @@ width_normal
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 2
@@ -11255,7 +11255,7 @@ wordSpacing
 assert
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 =
 =
