Bug 1722789 [wpt PR 29823] - Handle font values that contain "var()" for OffscreenCanvas, a=testonly
Automatic update from web-platform-tests
Handle font values that contain "var()" for OffscreenCanvas

This is an offscreen equivalent to Bug 1131922. The fix for that
bug introduced CSSParser::ParseFont, which handles var() and CSS-wide
keywords correctly.

Use CSSParser::ParseFont for OffscreenCanvasRenderingContext2D as well.

Fixed: 1233430
Change-Id: Ic2119c64dec428f3b34f7fc0c15c86b6bcfe9195
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3058649
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Anders Hartvoll Ruud <andruudchromium.org>
Cr-Commit-Position: refs/heads/master{#906604}

--

wpt-commits: e7d848ca78a17253dde9d49956bc00ae3ba91c57
wpt-pr: 29823

UltraBlame original commit: cd00068d3ad86711aa960a66f906e15b88017bad

--- a/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml/offscreen/text.yaml
@@ -676,6 +676,106 @@ ctx
 font
 =
 '
+10px
+revert
+'
+;
+assert
+ctx
+.
+font
+=
+=
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
+var
+(
+-
+-
+x
+)
+'
+;
+assert
+ctx
+.
+font
+=
+=
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
+var
+(
+-
+-
+x
+10px
+serif
+)
+'
+;
+assert
+ctx
+.
+font
+=
+=
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
+20px
+serif
+'
+;
+ctx
+.
+font
+=
+'
 1em
 serif
 ;
