Bug 1723277 - temporarily disable url/failure.html on Linux asan for failing with forbidden connection. CLOSED TREE
Subtest got added in bug 1720566.

Test gets disabled to let whole wpt sync stick and shall be investigated next
week.

UltraBlame original commit: 9d28edca8e9f7d06b887a23e783260310941ac8d

--- a/testing/web-platform/meta/url/failure.html.ini
+++ b/testing/web-platform/meta/url/failure.html.ini
@@ -3,6 +3,37 @@ failure
 .
 html
 ]
+disabled
+:
+if
+(
+os
+=
+=
+"
+linux
+"
+and
+asan
+)
+:
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1723277
 max
 -
 asserts
