Bug 1709840 - disable browser_toolbox_toolbar_minimum_width.js on windows_10_64_qr for frequent failures. r=intermittent-reviewers,jmaher DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D121459

UltraBlame original commit: 10ccc326e0f10968446f5ba604ab815ab0103f8e

--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -800,6 +800,32 @@ browser_toolbox_toolbar_minimum_width
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+'
+win
+'
+&
+&
+bits
+=
+=
+64
+&
+&
+webrender
+&
+&
+!
+debug
+#
+Bug
+1709840
 [
 browser_toolbox_toolbar_overflow
 .
