Bug 1723026 - [remote] Enable mochitest-remote suite on Fission platforms r=webdriver-reviewers,whimboo,jmaher
Depends on D120084

Differential Revision: https://phabricator.services.mozilla.com/D121351

UltraBlame original commit: a012f89228e38c2d44aa5e688eab41b34d4193db

--- a/taskcluster/ci/test/mochitest.yml
+++ b/taskcluster/ci/test/mochitest.yml
@@ -7056,16 +7056,145 @@ by
 -
 variant
 :
-#
-Bug
-1600054
-:
-Remote
-Agent
-not
-Fission
-compatible
 fission
+:
+by
+-
+test
+-
+platform
+:
+(
+windows10
+-
+64
+|
+macosx
+.
+*
+64
+)
+(
+-
+shippable
+)
+?
+-
+qr
+/
+(
+opt
+|
+debug
+)
+:
+[
+'
+trunk
+'
+]
+default
+:
+[
+]
+webrender
+-
+sw
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+64
+(
+-
+asan
+)
+?
+-
+qr
+/
+(
+opt
+|
+debug
+)
+:
+[
+'
+all
+'
+]
+linux
+.
+*
+64
+(
+-
+shippable
+|
+-
+ccov
+)
+-
+qr
+/
+opt
+:
+[
+'
+release
+'
+]
+default
+:
+built
+-
+projects
+webrender
+-
+sw
+-
+fission
+:
+by
+-
+test
+-
+platform
+:
+linux
+.
+*
+64
+(
+-
+asan
+|
+-
+shippable
+)
+?
+-
+qr
+/
+(
+opt
+|
+debug
+)
+:
+[
+'
+trunk
+'
+]
+default
 :
 [
 ]
