--- a/dom/bindings/Bindings.conf
+++ b/dom/bindings/Bindings.conf
@@ -2350,6 +2350,30 @@ Localization
 :
 {
 '
+implicitJSContext
+'
+:
+[
+'
+formatValue
+'
+'
+formatValues
+'
+'
+formatMessages
+'
+'
+formatValueSync
+'
+'
+formatValuesSync
+'
+'
+formatMessagesSync
+'
+]
+'
 nativeType
 '
 :
