--- a/taskcluster/ci/test/awsy.yml
+++ b/taskcluster/ci/test/awsy.yml
@@ -239,6 +239,9 @@ Are
 we
 slim
 yet
+-
+tp5
+pageset
 treeherder
 -
 symbol
@@ -253,129 +256,7 @@ on
 -
 projects
 :
-by
--
-variant
-:
-fission
-:
-by
--
-test
--
-platform
-:
-linux1804
--
-64
--
-shippable
--
-qr
-/
-opt
-:
 [
-mozilla
--
-central
-]
-windows10
--
-64
--
-2004
--
-shippable
--
-qr
-/
-opt
-:
-[
-mozilla
--
-central
-]
-default
-:
-[
-]
-default
-:
-by
--
-test
--
-platform
-:
-.
-*
--
-devedition
-/
-.
-*
-:
-[
-]
-#
-don
-'
-t
-run
-on
-devedition
-windows
-.
-*
--
-32
-.
-*
-/
-opt
-:
-[
-]
-(
-linux
-|
-windows10
--
-64
--
-2004
-|
-mac
-)
-(
-?
-!
-.
-*
-shippable
-)
-.
-*
-/
-opt
-:
-[
-]
-default
-:
-[
-integration
-mozilla
--
-central
-mozilla
--
-beta
-mozilla
--
-release
 ]
 awsy
 -
