Bug 1718326 - Part 2: Migrate web-platform-tests suite to new Azure Windows 10 2004 workers r=jmaher,webdriver-reviewers,whimboo
Differential Revision: https://phabricator.services.mozilla.com/D121490

UltraBlame original commit: 4cd32810f3aff3a1f7395a09f80fe4de7025fc36

--- a/taskcluster/ci/test/test-platforms.yml
+++ b/taskcluster/ci/test/test-platforms.yml
@@ -976,6 +976,8 @@ platform
 -
 tests
 -
+reftest
+-
 ccov
 -
 code
@@ -1025,15 +1027,7 @@ platform
 -
 tests
 -
-web
--
-platform
--
-tests
--
-wdspec
--
-headless
+reftest
 windows10
 -
 64
@@ -1078,11 +1072,15 @@ platform
 -
 tests
 -
+reftest
+-
 web
 -
 platform
 -
 tests
+-
+reftest
 -
 backlog
 -
@@ -1095,16 +1093,6 @@ browsertime
 mochitest
 -
 webgpu
--
-web
--
-platform
--
-tests
--
-wdspec
--
-headless
 windows10
 -
 aarch64
@@ -1219,23 +1207,17 @@ platform
 -
 tests
 -
+reftest
+-
 web
 -
 platform
 -
 tests
+-
+reftest
 -
 backlog
--
-web
--
-platform
--
-tests
--
-wdspec
--
-headless
 -
 raptor
 -
@@ -1293,6 +1275,8 @@ web
 platform
 -
 tests
+-
+reftest
 -
 mochitest
 -
@@ -1481,6 +1465,16 @@ test
 sets
 :
 -
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
 windows10
 -
 2004
@@ -1507,6 +1501,26 @@ test
 -
 sets
 :
+-
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
+web
+-
+platform
+-
+tests
+-
+wdspec
+-
+headless
 -
 windows10
 -
@@ -1536,6 +1550,38 @@ sets
 :
 -
 awsy
+-
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
+backlog
+-
+web
+-
+platform
+-
+tests
+-
+wdspec
+-
+headless
 -
 windows10
 -
@@ -1570,6 +1616,38 @@ sets
 -
 awsy
 -
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
+-
+backlog
+-
+web
+-
+platform
+-
+tests
+-
+wdspec
+-
+headless
+-
 windows10
 -
 2004
@@ -1600,6 +1678,16 @@ test
 -
 sets
 :
+-
+web
+-
+platform
+-
+tests
+-
+no
+-
+reftest
 -
 windows10
 -
