--- a/testing/web-platform/meta/fetch/metadata/embed.https.sub.tentative.html.ini
+++ b/testing/web-platform/meta/fetch/metadata/embed.https.sub.tentative.html.ini
@@ -29,6 +29,10 @@ mac
 "
 :
 TIMEOUT
+if
+win10_2004
+:
+TIMEOUT
 [
 Navigate
 to
@@ -76,6 +80,10 @@ linux
 "
 :
 NOTRUN
+if
+win10_2004
+:
+NOTRUN
 [
 Wrapper
 :
@@ -102,6 +110,10 @@ os
 "
 linux
 "
+:
+NOTRUN
+if
+win10_2004
 :
 NOTRUN
 [
@@ -132,6 +144,10 @@ os
 "
 linux
 "
+:
+NOTRUN
+if
+win10_2004
 :
 NOTRUN
 [
@@ -194,6 +210,10 @@ os
 "
 linux
 "
+:
+NOTRUN
+if
+win10_2004
 :
 NOTRUN
 [
@@ -224,5 +244,9 @@ os
 "
 linux
 "
+:
+TIMEOUT
+if
+win10_2004
 :
 TIMEOUT
