--- a/testing/web-platform/meta/wasm/jsapi/exception/constructor.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/exception/constructor.tentative.any.js.ini
@@ -18,6 +18,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 length
 ]
@@ -25,6 +29,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -36,6 +44,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -45,6 +57,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -65,6 +81,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 length
 ]
@@ -72,6 +92,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -83,6 +107,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -92,6 +120,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
