--- a/testing/web-platform/meta/wasm/jsapi/exception/getArg.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/exception/getArg.tentative.any.js.ini
@@ -19,6 +19,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -28,6 +32,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -40,6 +48,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -57,6 +69,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 getArg
 ]
@@ -64,6 +80,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -85,6 +105,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -94,6 +118,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -106,6 +134,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -123,6 +155,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 getArg
 ]
@@ -130,6 +166,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
