--- a/testing/web-platform/meta/wasm/jsapi/exception/is.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/exception/is.tentative.any.js.ini
@@ -17,6 +17,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -28,6 +32,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 is
 ]
@@ -35,6 +43,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -58,6 +70,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 Invalid
 exception
@@ -69,6 +85,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 is
 ]
@@ -76,6 +96,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
