--- a/testing/web-platform/meta/wasm/jsapi/tag/constructor.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/tag/constructor.tentative.any.js.ini
@@ -18,6 +18,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 length
 ]
@@ -25,6 +29,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -45,6 +53,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 length
 ]
@@ -52,6 +64,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
