--- a/testing/web-platform/meta/wasm/jsapi/tag/toString.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/tag/toString.tentative.any.js.ini
@@ -23,6 +23,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 toStringTag
 exists
@@ -38,6 +42,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -67,6 +75,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 toStringTag
 exists
@@ -82,6 +94,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
