--- a/testing/web-platform/meta/wasm/jsapi/tag/type.tentative.any.js.ini
+++ b/testing/web-platform/meta/wasm/jsapi/tag/type.tentative.any.js.ini
@@ -20,6 +20,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 [
 i32
@@ -31,6 +35,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -46,6 +54,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -68,6 +80,10 @@ if
 release_or_beta
 :
 FAIL
+if
+win10_2004
+:
+FAIL
 [
 [
 i32
@@ -79,6 +95,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
@@ -94,6 +114,10 @@ expected
 :
 if
 release_or_beta
+:
+FAIL
+if
+win10_2004
 :
 FAIL
 [
