Bug 1670261 - Upgrade Glean, include glean-ffi and re-export its symbols. r=chutten
Differential Revision: https://phabricator.services.mozilla.com/D121084

UltraBlame original commit: 45ab05c0c3717fc6d4fb88743e69f693316491a2

--- a/toolkit/components/glean/Cargo.toml
+++ b/toolkit/components/glean/Cargo.toml
@@ -55,7 +55,7 @@ glean
 version
 =
 "
-39
+40
 .
 0
 .
@@ -73,6 +73,140 @@ mode
 "
 ]
 }
+#
+In
+theory
+we
+only
+need
+this
+for
+target_os
+=
+"
+android
+"
+builds
+.
+#
+Cargo
+has
+the
+ability
+to
+do
+that
+with
+[
+target
+.
+'
+cfg
+(
+target_os
+=
+"
+android
+"
+)
+'
+.
+dependencies
+]
+.
+#
+However
+that
+seems
+to
+confuse
+cbindgen
+quite
+a
+lot
+;
+#
+it
+suddenly
+starts
+generating
+completely
+unrelated
+code
+and
+not
+adhering
+to
+the
+cbindgen
+.
+toml
+configuration
+#
+placed
+next
+to
+this
+file
+.
+#
+So
+for
+now
+we
+unconditionally
+depend
+on
+it
+but
+in
+the
+code
+we
+only
+extern
+crate
+it
+on
+Android
+builds
+.
+#
+While
+glean
+-
+ffi
+is
+still
+built
+(
+I
+think
+it
+is
+)
+#
+it
+'
+s
+not
+linked
+into
+the
+final
+library
+.
+glean
+-
+ffi
+=
+"
+40
+.
+0
+.
+0
+"
 log
 =
 "
