Bug 1670261 - Re-export the Glean Kotlin bindings from GeckoView. r=agi
This also upgrades to Kotlin 1.3.50, which is required to due Glean
requirements. Fenix is already on 1.4, so that's no problem.

We also turn the geckoview_example into a multiDex application.
Otherwise we run into the 64k dex symbols size limit.

Differential Revision: https://phabricator.services.mozilla.com/D116601

UltraBlame original commit: 150c73837e22ba474571fc422f39e8557eed5544

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -2074,6 +2074,61 @@ listener
 )
 }
 }
+configurations
+{
+/
+/
+No
+need
+to
+include
+libglean_ffi
+.
+so
+here
+or
+for
+GeckoView
+consumers
+.
+/
+/
+If
+those
+consumers
+use
+Glean
+they
+'
+ll
+get
+the
+FFI
+through
+GeckoView
+anyway
+.
+all
+*
+.
+exclude
+group
+:
+'
+org
+.
+mozilla
+.
+telemetry
+'
+module
+:
+'
+glean
+-
+native
+'
+}
 dependencies
 {
 /
@@ -2152,6 +2207,34 @@ jvm
 3
 .
 70
+"
+/
+/
+The
+Glean
+Kotlin
+which
+will
+be
+re
+-
+exported
+.
+api
+"
+org
+.
+mozilla
+.
+telemetry
+:
+glean
+:
+36
+.
+0
+.
+1
 "
 implementation
 "
