--- a/mobile/android/geckoview_example/build.gradle
+++ b/mobile/android/geckoview_example/build.gradle
@@ -93,6 +93,8 @@ versionName
 .
 0
 "
+multiDexEnabled
+true
 }
 compileOptions
 {
@@ -356,6 +358,20 @@ material
 material
 :
 1
+.
+0
+.
+0
+'
+implementation
+'
+androidx
+.
+multidex
+:
+multidex
+:
+2
 .
 0
 .
