Bug 1670261 - Ensure the Glean versions in the project match. r=agi,chutten
In GeckoView we need to depend on the same Glean version as the included
Glean Rust crate has.
We _could_ let Gradle read that from Cargo.lock directly,
but that complicates the build.

Instead we manually update both versions to the same
and have Gradle ensure we don't forget that.

Differential Revision: https://phabricator.services.mozilla.com/D116602

UltraBlame original commit: af093190c4f701a456a630a6993d77b7ad8eb8db

--- a/mobile/android/geckoview/build.gradle
+++ b/mobile/android/geckoview/build.gradle
@@ -2220,6 +2220,16 @@ re
 -
 exported
 .
+if
+(
+!
+mozconfig
+.
+substs
+.
+MOZ_ANDROID_GECKOVIEW_LITE
+)
+{
 api
 "
 org
@@ -2230,12 +2240,15 @@ telemetry
 :
 glean
 :
-36
+{
+project
 .
-0
+ext
 .
-1
+gleanVersion
+}
 "
+}
 implementation
 "
 androidx
