--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,21 @@
+import
+org
+.
+tomlj
+.
+Toml
+import
+org
+.
+tomlj
+.
+TomlParseResult
+import
+org
+.
+tomlj
+.
+TomlTable
 def
 tryInt
 =
@@ -32,6 +50,150 @@ Integer
 }
 return
 string
+}
+/
+/
+Parses
+the
+Cargo
+.
+lock
+and
+returns
+the
+version
+for
+the
+given
+package
+name
+.
+def
+getRustVersionFor
+(
+packageName
+)
+{
+String
+version
+=
+null
+;
+TomlParseResult
+result
+=
+Toml
+.
+parse
+(
+file
+(
+"
+Cargo
+.
+lock
+"
+)
+.
+getText
+(
+)
+)
+;
+for
+(
+object
+in
+result
+.
+getArray
+(
+"
+package
+"
+)
+.
+toList
+(
+)
+)
+{
+def
+table
+=
+(
+TomlTable
+)
+object
+if
+(
+table
+.
+getString
+(
+"
+name
+"
+)
+=
+=
+packageName
+)
+{
+if
+(
+version
+!
+=
+null
+)
+{
+throw
+new
+StopExecutionException
+(
+"
+Multiple
+versions
+for
+'
+{
+packageName
+}
+'
+found
+.
+"
++
+"
+Ensure
+'
+{
+packageName
+}
+'
+is
+only
+included
+once
+.
+"
+)
+}
+version
+=
+table
+.
+getString
+(
+"
+version
+"
+)
+}
+}
+return
+version
 }
 allprojects
 {
@@ -70,6 +232,56 @@ gradle
 mozconfig
 .
 topobjdir
+gleanVersion
+=
+"
+40
+.
+0
+.
+0
+"
+if
+(
+gleanVersion
+!
+=
+getRustVersionFor
+(
+"
+glean
+"
+)
+)
+{
+throw
+new
+StopExecutionException
+(
+"
+Mismatched
+Glean
+version
+expected
+:
+{
+gleanVersion
+}
+"
++
+"
+found
+{
+getRustVersionFor
+(
+"
+glean
+"
+)
+}
+"
+)
+}
 buildToolsVersion
 =
 mozconfig
@@ -412,6 +624,20 @@ exec
 1
 .
 3
+'
+classpath
+'
+org
+.
+tomlj
+:
+tomlj
+:
+1
+.
+0
+.
+0
 '
 classpath
 "
