Bug 1341265 - Part 6: Optimise Set.prototype.has in CacheIR. r=iain
Use a simple VM-call in CacheIR for now. This approach won't be enough to
close the distance to the competition, because JSC/V8 can inline the complete
hash operation, but already inlining everything in CacheIR seems a bit extreme.

The next parts will inline the hash operation when called with specific types,
because there we can guarantee we won't generate a big blob of assembly in
CacheIR.

Differential Revision: https://phabricator.services.mozilla.com/D118972

UltraBlame original commit: 09f04c26176c925da7559fcb3396a8979449683e

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7434,6 +7434,27 @@ BigIntId
 -
 name
 :
+SetHasResult
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+5
+args
+:
+set
+:
+ObjId
+val
+:
+ValId
+-
+name
+:
 CallPrintString
 shared
 :
