Bug 1341265 - Part 7: Optimise Set.prototype.has for non-GC things in CacheIR. r=iain
Inline `Set.prototype.has` in CacheIR when called with non-GC things.

We have to inline the following steps:
1. Guard the input is a non-GC thing.
2. Normalise the input, i.e. transform doubles to int32 when possible and
   canonicalise NaN values.
3. Hash the input through `mozilla::HashGeneric()`.
4. Perform the hash lookup.


The hash lookup already uses templates and handles BigInts in preparation for
the next parts.

Differential Revision: https://phabricator.services.mozilla.com/D118973

UltraBlame original commit: 56ec3626f0ba135d2bbedf05fa09d0f954c0d382

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -894,6 +894,24 @@ args
 input
 :
 ValId
+-
+name
+:
+GuardToNonGCThing
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+1
+args
+:
+input
+:
+ValId
 #
 If
 the
@@ -7444,6 +7462,27 @@ false
 cost_estimate
 :
 5
+args
+:
+set
+:
+ObjId
+val
+:
+ValId
+-
+name
+:
+SetHasNonGCThingResult
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+3
 args
 :
 set
