Bug 1341265 - Part 9: Optimise Set.prototype.has for symbols in CacheIR. r=iain
Inline `Set.prototype.has` in CacheIR when called with symbols.

Differential Revision: https://phabricator.services.mozilla.com/D118975

UltraBlame original commit: bd5e0950f9d9622cfbaab99db8bf4b23085291b8

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7515,6 +7515,27 @@ StringId
 -
 name
 :
+SetHasSymbolResult
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+3
+args
+:
+set
+:
+ObjId
+sym
+:
+SymbolId
+-
+name
+:
 CallPrintString
 shared
 :
