Bug 1341265 - Part 10: Optimise Set.prototype.has for BigInts in CacheIR. r=iain
Inline `Set.prototype.has` in CacheIR when called with BigInts.

Differential Revision: https://phabricator.services.mozilla.com/D118976

UltraBlame original commit: 21199bd4965dddb8e4560f1ae24f1666ecf89605

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7536,6 +7536,27 @@ SymbolId
 -
 name
 :
+SetHasBigIntResult
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+3
+args
+:
+set
+:
+ObjId
+bigInt
+:
+BigIntId
+-
+name
+:
 CallPrintString
 shared
 :
