--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7557,6 +7557,27 @@ BigIntId
 -
 name
 :
+SetHasObjectResult
+shared
+:
+true
+transpile
+:
+false
+cost_estimate
+:
+3
+args
+:
+set
+:
+ObjId
+obj
+:
+ObjId
+-
+name
+:
 CallPrintString
 shared
 :
