Bug 1341265 - Part 12: Optimise Set.prototype.has for non-GC things in Warp. r=iain
Similar to part 7, optimise the hash lookup for non-GC things.

Differential Revision: https://phabricator.services.mozilla.com/D118978

UltraBlame original commit: 6716962a06ed8f31ed84676cda7b5224678fe7b1

--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -903,7 +903,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 1
@@ -7479,7 +7479,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
