--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -8080,12 +8080,57 @@ none
 -
 name
 :
+ToHashableString
+operands
+:
+input
+:
+String
+result_type
+:
+String
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+none
+possibly_calls
+:
+true
+-
+name
+:
 HashNonGCThing
 operands
 :
 input
 :
 Value
+result_type
+:
+Int32
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+none
+-
+name
+:
+HashString
+operands
+:
+input
+:
+String
 result_type
 :
 Int32
