--- a/js/src/jit/MIROps.yaml
+++ b/js/src/jit/MIROps.yaml
@@ -8104,6 +8104,30 @@ true
 -
 name
 :
+ToHashableValue
+operands
+:
+input
+:
+Value
+result_type
+:
+Value
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+none
+possibly_calls
+:
+true
+-
+name
+:
 HashNonGCThing
 operands
 :
@@ -8249,6 +8273,27 @@ none
 -
 name
 :
+HashValue
+operands
+:
+set
+:
+Object
+input
+:
+Value
+result_type
+:
+Int32
+movable
+:
+false
+alias_set
+:
+none
+-
+name
+:
 SetObjectHasNonBigInt
 operands
 :
@@ -8300,6 +8345,60 @@ if_operands_equal
 alias_set
 :
 custom
+-
+name
+:
+SetObjectHasValue
+operands
+:
+set
+:
+Object
+value
+:
+Value
+hash
+:
+Int32
+result_type
+:
+Boolean
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+custom
+-
+name
+:
+SetObjectHasValueVMCall
+operands
+:
+set
+:
+Object
+value
+:
+Value
+result_type
+:
+Boolean
+movable
+:
+true
+congruent_to
+:
+if_operands_equal
+alias_set
+:
+custom
+possibly_calls
+:
+true
 -
 name
 :
