--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7584,7 +7584,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 5
@@ -7605,7 +7605,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7626,7 +7626,7 @@ shared
 false
 transpile
 :
-false
+true
 cost_estimate
 :
 5
@@ -7647,7 +7647,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7668,7 +7668,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7689,7 +7689,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
