--- a/js/src/jit/CacheIROps.yaml
+++ b/js/src/jit/CacheIROps.yaml
@@ -7710,7 +7710,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 5
@@ -7731,7 +7731,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7752,7 +7752,7 @@ shared
 false
 transpile
 :
-false
+true
 cost_estimate
 :
 5
@@ -7773,7 +7773,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7794,7 +7794,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
@@ -7815,7 +7815,7 @@ shared
 true
 transpile
 :
-false
+true
 cost_estimate
 :
 3
