--- a/.cargo/config.in
+++ b/.cargo/config.in
@@ -34,56 +34,6 @@ github
 .
 com
 /
-zbraniecki
-/
-l10nregistry
--
-rs
-"
-]
-git
-=
-"
-https
-:
-/
-/
-github
-.
-com
-/
-zbraniecki
-/
-l10nregistry
--
-rs
-"
-replace
--
-with
-=
-"
-vendored
--
-sources
-"
-rev
-=
-"
-92d8fbfbbbdffa2047ce01a935a389eb11031f69
-"
-[
-source
-.
-"
-https
-:
-/
-/
-github
-.
-com
-/
 shravanrn
 /
 nix
@@ -269,6 +219,56 @@ rev
 =
 "
 1bb484e96ae724309e3346968e8ffd4c25e61616
+"
+[
+source
+.
+"
+https
+:
+/
+/
+github
+.
+com
+/
+mozilla
+/
+l10nregistry
+-
+rs
+"
+]
+git
+=
+"
+https
+:
+/
+/
+github
+.
+com
+/
+mozilla
+/
+l10nregistry
+-
+rs
+"
+replace
+-
+with
+=
+"
+vendored
+-
+sources
+"
+rev
+=
+"
+55bf7f826d773303a67d8d7fdab099a04322d4fb
 "
 [
 source
