Backed out 3 changesets (bug 1715832, bug 1718326) for WPT failures on multiple files. CLOSED TREE
Backed out changeset d8896994f92b (bug 1718326)
Backed out changeset e3b162ae28a7 (bug 1715832)
Backed out changeset 4cd32810f3af (bug 1718326)

UltraBlame original commit: 3ff8ac39b364436a63b387f445899a7db0d3ddd8

--- a/taskcluster/ci/test/web-platform.yml
+++ b/taskcluster/ci/test/web-platform.yml
@@ -132,8 +132,6 @@ windows10
 -
 64
 -
-2004
--
 qr
 /
 debug
@@ -374,6 +372,24 @@ wpt
 )
 virtualization
 :
+by
+-
+test
+-
+platform
+:
+windows10
+-
+64
+.
+*
+/
+.
+*
+:
+hardware
+default
+:
 virtual
 tier
 :
@@ -417,8 +433,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -550,8 +564,6 @@ windows10
 -
 64
 -
-2004
--
 ccov
 .
 *
@@ -665,8 +677,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -687,8 +697,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -946,8 +954,6 @@ trunk
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -1034,8 +1040,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -1142,8 +1146,6 @@ platform
 windows10
 -
 64
--
-2004
 .
 *
 -
@@ -1280,8 +1282,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -1302,8 +1302,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -1436,8 +1434,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -1641,8 +1637,6 @@ trunk
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -1729,8 +1723,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -1900,8 +1892,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -1922,8 +1912,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -2010,8 +1998,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -2265,8 +2251,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -2287,8 +2271,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -2381,8 +2363,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -2706,8 +2686,6 @@ windows10
 -
 64
 -
-2004
--
 qr
 /
 debug
@@ -2811,8 +2789,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -2833,8 +2809,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -2921,8 +2895,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -3042,8 +3014,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -3088,8 +3058,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 -
 qr
@@ -3110,8 +3078,6 @@ linux
 windows10
 -
 64
--
-2004
 )
 (
 -
@@ -3277,8 +3243,6 @@ trunk
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -3447,8 +3411,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -3581,8 +3543,6 @@ trunk
 windows10
 -
 64
--
-2004
 (
 -
 shippable
@@ -3685,8 +3645,6 @@ opt
 windows10
 -
 64
--
-2004
 (
 -
 shippable
