--- a/testing/web-platform/meta/web-share/idlharness.https.window.js.ini
+++ b/testing/web-platform/meta/web-share/idlharness.https.window.js.ini
@@ -7,3 +7,87 @@ window
 .
 html
 ]
+[
+Navigator
+interface
+:
+operation
+share
+(
+optional
+ShareData
+)
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+[
+Navigator
+interface
+:
+navigator
+must
+inherit
+property
+"
+share
+(
+optional
+ShareData
+)
+"
+with
+the
+proper
+type
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+[
+Navigator
+interface
+:
+calling
+share
+(
+optional
+ShareData
+)
+on
+navigator
+with
+too
+few
+arguments
+must
+throw
+TypeError
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
