--- a/testing/web-platform/meta/web-share/share-sharePromise-internal-slot.https.html.ini
+++ b/testing/web-platform/meta/web-share/share-sharePromise-internal-slot.https.html.ini
@@ -11,3 +11,52 @@ https
 .
 html
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+TIMEOUT
+[
+Only
+allow
+one
+share
+call
+at
+a
+time
+which
+is
+controlled
+by
+the
+\
+[
+\
+[
+sharePromise
+\
+]
+\
+]
+internal
+slot
+.
+]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+:
+TIMEOUT
