Bug 1718012 - Call UpdateSizesBeforeReflow only for resize reflow cases and set MobileViewportManager::mMobileViewportSize even if mDisplaySize hasn't been changed in UpdateSizesBeforeReflow. r=tnikkel
In the case of reflowing caused by full zoom changes, the mDisplaySize isn't
changed, whereas mMobileViewportSize should be changed.

Differential Revision: https://phabricator.services.mozilla.com/D120190

UltraBlame original commit: 295399ab06a803980dcf13442689369572a21c37

--- a/testing/web-platform/meta/css/css-values/viewport-units-css2-001.html.ini
+++ b/testing/web-platform/meta/css/css-values/viewport-units-css2-001.html.ini
@@ -23,22 +23,16 @@ width
 expected
 :
 if
-(
 os
 =
 =
 "
 mac
 "
-)
 :
 [
-"
 FAIL
-"
-"
 PASS
-"
 ]
 if
 os
@@ -49,12 +43,8 @@ win
 "
 :
 [
-"
 FAIL
-"
-"
 PASS
-"
 ]
 if
 os
@@ -64,7 +54,10 @@ os
 android
 "
 :
+[
+FAIL
 PASS
+]
 FAIL
 [
 vmin
@@ -80,22 +73,16 @@ width
 expected
 :
 if
-(
 os
 =
 =
 "
 mac
 "
-)
 :
 [
-"
 FAIL
-"
-"
 PASS
-"
 ]
 if
 os
@@ -106,12 +93,8 @@ win
 "
 :
 [
-"
 FAIL
-"
-"
 PASS
-"
 ]
 if
 os
@@ -122,4 +105,26 @@ android
 "
 :
 PASS
+FAIL
+[
+vmax
+length
+applied
+to
+border
+-
+top
+-
+width
+]
+expected
+:
+if
+os
+=
+=
+"
+android
+"
+:
 FAIL
