Bug 1715482 - Geolocation should gracefully handle Documents that are not fully active r=saschanaz
Spec change https://github.com/w3c/geolocation-api/pull/97

Differential Revision: https://phabricator.services.mozilla.com/D117273

UltraBlame original commit: aa23b80472a78fecd64faa6a41ba5f4daf6e3044

--- a/dom/tests/mochitest/geolocation/mochitest.ini
+++ b/dom/tests/mochitest/geolocation/mochitest.ini
@@ -312,6 +312,25 @@ fail
 if
 =
 xorigin
+[
+test_not_fully_active
+.
+html
+]
+skip
+-
+if
+=
+xorigin
+#
+Hangs
+support
+-
+files
+=
+popup
+.
+html
 #
 This
 test
