Bug 1720138 - Ship v25.0.0 of the WebCompat System Addon. r=denschub,webcompat-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D121585

UltraBlame original commit: 47f2ec8846a902f470120fcb2e3ecbb012a0dab3

--- a/browser/extensions/webcompat/manifest.json
+++ b/browser/extensions/webcompat/manifest.json
@@ -33,9 +33,9 @@ version
 "
 :
 "
-24
+25
 .
-14
+0
 .
 0
 "
@@ -775,6 +775,13 @@ google
 safeframe
 .
 html
+"
+"
+shims
+/
+iaspet
+.
+js
 "
 "
 shims
