Bug 1639850 - disable many testing/xpcshell/example/unit xpcshell tests on windows debug. r=intermittent-reviewers,bhearsum
Differential Revision: https://phabricator.services.mozilla.com/D121572

UltraBlame original commit: 4fadaf727b418ee025f0599530dc22d881689c8a

--- a/testing/xpcshell/example/unit/xpcshell.ini
+++ b/testing/xpcshell/example/unit/xpcshell.ini
@@ -87,6 +87,19 @@ test_check_nsIException
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+win
+"
+&
+&
+debug
 [
 test_check_nsIException_failing
 .
@@ -97,6 +110,19 @@ fail
 if
 =
 true
+skip
+-
+if
+=
+os
+=
+=
+"
+win
+"
+&
+&
+debug
 [
 test_do_get_tempdir
 .
@@ -177,6 +203,19 @@ test_do_check_null
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+win
+"
+&
+&
+debug
 [
 test_do_check_null_failing
 .
@@ -187,6 +226,19 @@ fail
 if
 =
 true
+skip
+-
+if
+=
+os
+=
+=
+"
+win
+"
+&
+&
+debug
 [
 test_do_check_matches
 .
