--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -22359,6 +22359,34 @@ always
 Is
 support
 for
+custom
+element
+disabledFeatures
+enabled
+?
+-
+name
+:
+dom
+.
+webcomponents
+.
+disabledFeatures
+.
+enabled
+type
+:
+bool
+value
+:
+true
+mirror
+:
+always
+#
+Is
+support
+for
 form
 -
 associated
