Backed out changeset 67c33ba5566e (bug 1722945) for causing bustage in nsContainerFrame.cpp
UltraBlame original commit: a4b705497d98e2d64092cf614218f2fd18b4e409

--- a/testing/web-platform/meta/css/css-break/parsing/break-inside-computed.html.ini
+++ b/testing/web-platform/meta/css/css-break/parsing/break-inside-computed.html.ini
@@ -16,6 +16,36 @@ value
 '
 avoid
 -
+column
+'
+]
+expected
+:
+FAIL
+[
+Property
+break
+-
+inside
+value
+'
+avoid
+-
+page
+'
+]
+expected
+:
+FAIL
+[
+Property
+break
+-
+inside
+value
+'
+avoid
+-
 region
 '
 ]
