--- a/testing/web-platform/meta/css/css-break/parsing/break-inside-valid.html.ini
+++ b/testing/web-platform/meta/css/css-break/parsing/break-inside-valid.html.ini
@@ -23,6 +23,60 @@ inside
 "
 avoid
 -
+column
+"
+should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+break
+-
+inside
+'
+\
+]
+=
+"
+avoid
+-
+page
+"
+should
+set
+the
+property
+value
+]
+expected
+:
+FAIL
+[
+e
+.
+style
+[
+'
+break
+-
+inside
+'
+\
+]
+=
+"
+avoid
+-
 region
 "
 should
