Bug 1723528 - Re-enable some skipped extension tests on Android r=rpl
... and link some skip-ifs to more specific bugs

Differential Revision: https://phabricator.services.mozilla.com/D121630

UltraBlame original commit: 1d3171351fcf9a8ed392656a75fd8e1857ac83d7

--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -708,8 +708,6 @@ skip
 if
 =
 socketprocess_networking
-|
-|
 os
 =
 =
@@ -718,9 +716,15 @@ android
 "
 #
 Android
-:
-Bug
-1680132
+needs
+alternative
+for
+proxy
+.
+settings
+-
+bug
+1723523
 [
 test_ext_downloads
 .
@@ -1770,8 +1774,6 @@ appname
 "
 thunderbird
 "
-|
-|
 os
 =
 =
@@ -1779,10 +1781,14 @@ os
 android
 "
 #
-Android
-:
-Bug
-1680132
+Sanitizer
+.
+jsm
+is
+not
+in
+toolkit
+.
 [
 test_ext_storage_sync
 .
@@ -1799,10 +1805,24 @@ os
 android
 "
 #
-Android
-:
 Bug
 1680132
+;
+SessionStoreFunctions
+.
+jsm
+relies
+on
+SessionStore
+.
+jsm
+that
+does
+not
+exist
+on
+Android
+.
 [
 test_ext_storage_sync_kinto
 .
