Bug 1719901 - Show "Save as dialog" instead of "Unknown Content" dialog. r=mtigley,Gijs,preferences-reviewers
Also solves 1719902 - the default system action is changed from "opening with file" to saving.

Differential Revision: https://phabricator.services.mozilla.com/D120839

UltraBlame original commit: 42314b388e89ea24a4e6cc0d70bdb9b0432e41ca

--- a/uriloader/exthandler/tests/mochitest/browser.ini
+++ b/uriloader/exthandler/tests/mochitest/browser.ini
@@ -237,6 +237,11 @@ file_pdf_application_pdf
 .
 pdf
 [
+browser_shows_where_to_save_dialog
+.
+js
+]
+[
 browser_open_internal_choice_persistence
 .
 js
