Bug 1723198 - Don't delete user.js in remotexpcshelltests.py + tests r=jmaher
The new tests in testing/xpcshell/example/ cover the following scenarios:

- Local AND remote xpcshell tests. In contrast, modifications to
  selftest.py in bug 1635227 only covered runxpcshelltests.

- `prefs=` inheritance from ancestor manifests as implemented by
  https://hg.mozilla.org/mozilla-central/rev/ac51a01611dc

- Per-file `prefs` setters (used in bug 1638099).

- Multiple prefs and comments per `prefs` line.

Differential Revision: https://phabricator.services.mozilla.com/D121632

UltraBlame original commit: 43a0e54578b1b28a414cc5801ca3197b995e7f5b

--- a/testing/xpcshell/example/unit/xpcshell.ini
+++ b/testing/xpcshell/example/unit/xpcshell.ini
@@ -82,6 +82,41 @@ js
 check_profile
 .
 js
+prefs_test_common
+.
+js
+#
+NOTE
+:
+Do
+NOT
+set
+prefs
+=
+here
+.
+If
+you
+do
+move
+test_prefs_no_defaults
+.
+js
+and
+#
+test_prefs_no_defaults_with_file
+.
+js
+to
+a
+new
+file
+without
+"
+prefs
+=
+"
+.
 [
 test_check_nsIException
 .
@@ -163,6 +198,29 @@ test_location
 .
 js
 ]
+[
+test_prefs_no_defaults
+.
+js
+]
+[
+test_prefs_no_defaults_with_file
+.
+js
+]
+prefs
+=
+dummy
+.
+pref
+.
+from
+.
+test
+.
+file
+=
+1
 [
 test_profile
 .
