--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.ini
@@ -1523,6 +1523,21 @@ test_ext_schema
 .
 js
 ]
+skip
+-
+if
+=
+os
+=
+=
+"
+android
+"
+#
+Android
+:
+Bug
+1680132
 [
 test_ext_script_filenames
 .
