Bug 1719156 - [devtools] Fix iframe dropdown with server side target. r=jdescottes.
We used to set doNotFireFrameUpdates on all the target actors
created from the server, and as a result, we would never populate
the iframe dropdown.
The original concern was that since we can have multiple targets
now (when fission is enabled), different frameUpdate events would
be fired which would cause issues in the iframe dropdown.
But at the moment, we know that the iframe dropdown does not support
Fission (remote frames are not displayed), as the toolbox only listen
for frame-update events emitted from the top-level target.
With this patch, we'll emit frameUpdate event only from top-level targets,
so we don't send unnecessary RDP packet to client.
A test is added that checks multiple scenarios with pages adding and
removing iframes, as well as navigating so we can assert the dropdown
berhaviour with server side targets.
The test is tagged as fail-if on Fission as we're missing remote frames
in the dropdown.

Differential Revision: https://phabricator.services.mozilla.com/D121601

UltraBlame original commit: 4022459dae76140c96f23128d4251e08900d4d19

--- a/devtools/client/framework/test/browser.ini
+++ b/devtools/client/framework/test/browser.ini
@@ -581,6 +581,19 @@ browser_toolbox_fission_navigation
 js
 ]
 [
+browser_toolbox_frames_list
+.
+js
+]
+fail
+-
+if
+=
+fission
+#
+Bug
+1608054
+[
 browser_toolbox_getpanelwhenready
 .
 js
