--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -23000,9 +23000,19 @@ enabled
 type
 :
 bool
+#
+ifdef
+XP_WIN
+value
+:
+IS_EARLY_BETA_OR_EARLIER
+#
+else
 value
 :
 false
+#
+endif
 mirror
 :
 always
