Bug 1721614 - Handle blank onboarding screen on navigating back from about:home r=andreio
Differential Revision: https://phabricator.services.mozilla.com/D121037

UltraBlame original commit: d1aeb4e830a9a09bfbd5e24c654e2f3620e1ea21

--- a/browser/components/newtab/test/browser/browser.ini
+++ b/browser/components/newtab/test/browser/browser.ini
@@ -141,6 +141,11 @@ browser_aboutwelcome_multistage_default
 js
 ]
 [
+browser_aboutwelcome_multistage_primary
+.
+js
+]
+[
 browser_aboutwelcome_multistage_experimentAPI
 .
 js
